# ConflictCraft

./: .gitignore  CHANGELOG.md  Makefile  README.md
core/: CMakeLists.txt
core/include/conflictcraft/: diff3.hpp  graph.hpp  hash.hpp  parser.hpp  resolve.hpp  serializer.hpp  types.hpp
core/src/: diff3.cpp  graph.cpp  hash.cpp  main.cpp  parser.cpp  resolve.cpp  serializer.cpp
core/tests/: test_common.hpp  test_diff3.cpp  test_graph.cpp  test_parser.cpp  test_resolve.cpp
docs/: ConflictCraft-Full-Tutorial.md  architecture.md  data-contracts.md  operations.md  rule-engine.md  vscode-extension.md
python_engine/: pyproject.toml
python_engine/conflictcraft_rules/: engine.py  main.py
python_engine/conflictcraft_rules/rules/: __init__.py  function_signature_rule.py  import_block_merge_rule.py  json_key_merge_rule.py  whitespace_rule.py
python_engine/tests/: test_function_signature_rule.py  test_import_block_merge_rule.py  test_json_key_merge_rule.py  test_pipeline_determinism.py  test_whitespace_rule.py
schemas/: analysis-result.schema.json  explanation.schema.json  graph.schema.json  history.schema.json  hunk.schema.json  rule-config.schema.json  rule-result.schema.json  suggestion.schema.json
scripts/: conflictcraft  conflictcraft.ps1  install-device.ps1  install-device.sh  install-mergetool.ps1  install-mergetool.sh  mergetool-driver.ps1  mergetool-driver.sh  run-analyze.ps1  run-analyze.sh  run-resolve.ps1  run-resolve.sh  uninstall-device.ps1  uninstall-device.sh
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  conflictcraft-vscode-0.1.0.vsix  package-lock.json  package.json  tsconfig.json
(+33 files in other folders)
